tests/expectations/compiler/multibyte/multibyte_fail.out
Error [EPAR0370005]: expected : -- found '='
    --> compiler-test:30:29
     |
  30 |                    let swap = arr[j];
     |                             ^
